--- a/webapp/src/ionicapp/www/css/dashboards.css
+++ b/webapp/src/ionicapp/www/css/dashboards.css
@@ -124,24 +124,34 @@ hr {
 }
 
 .dashboard-border {
-  border: 1px solid #ccc!important;
+  border: 1px solid #2e4474!important;
   background-color: #fff;
   overflow: hidden;
-  margin: 20px 10px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
 }
 
-.dashboard-container {
-  padding: 10px;
-}
-
 .dashboard-round-border {
-
   border-radius: 2px;
 }
 
-
 .page_width_medium_dashboard {
-	max-width: 1000px;
+	max-width: 100%;
 	margin: 0% auto;
+}
+
+.gallery {
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+
+.numberCircle {
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  padding: 8px;
+  background: #2e4474;
+  border: 1px solid #2e4474;
+  color: white;
+  text-align: center;
+  font: 32px Arial, sans-serif;
 }
